--- a/ms-order/pom.xml
+++ b/ms-order/pom.xml
@@ -4,10 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.3</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <artifactId>shop</artifactId>
+        <groupId>ru.abenefic.spring</groupId>
+        <version>0.0.1</version>
     </parent>
 
     <groupId>ru.abenefic.spring.shop</groupId>
@@ -27,9 +26,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
+            <groupId>ru.abenefic.spring.shop</groupId>
+            <artifactId>core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
