--- a/core-lib/pom.xml
+++ b/core-lib/pom.xml
@@ -11,7 +11,7 @@
     <groupId>ru.abenefic.spring.shop</groupId>
     <artifactId>core</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>ms-core</name>
+    <name>core-lib</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -24,11 +24,6 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
     </dependencies>
 
     <build>
