--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     </properties>
 
     <modules>
-        <module>ms-core</module>
+        <module>core-lib</module>
         <module>ms-auth</module>
         <module>ms-order</module>
         <module>ms-product</module>
