--- a/ms-auth/src/main/resources/application.yaml
+++ b/ms-auth/src/main/resources/application.yaml
@@ -1,1 +1,22 @@
+server:
+  servlet:
+    context-path: /shop
+  port: 8191
+spring:
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:users_db;MODE=PostgreSQL
+    username: sa
+    password:
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
+  h2:
+    console:
+      enabled: true
+
+
+
 
