--- a/ms-order/src/main/resources/application.yaml
+++ b/ms-order/src/main/resources/application.yaml
@@ -1,1 +1,22 @@
+server:
+  servlet:
+    context-path: /shop
+  port: 8190
+spring:
+  datasource:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:orders_db;MODE=PostgreSQL
+    username: sa
+    password:
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.H2Dialect
+  h2:
+    console:
+      enabled: true
+
+
+
 
