--- a/ms-product/pom.xml
+++ b/ms-product/pom.xml
@@ -31,6 +31,11 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.2</version>
+        </dependency>
     </dependencies>
 
     <build>
