--- a/core-lib/src/main/resources/application.yaml
+++ b/core-lib/src/main/resources/application.yaml
@@ -10,4 +10,12 @@ spring:
   h2:
     console:
       enabled: true
-
+  redis:
+    host: localhost
+    port: 6379
+    password: foobared
+  session:
+    store-type: redis
+    redis:
+      save-mode: always
+      flush-mode: immediate
