--- a/ms-auth/src/main/resources/application.yaml
+++ b/ms-auth/src/main/resources/application.yaml
@@ -16,3 +16,12 @@ spring:
   h2:
     console:
       enabled: true
+  redis:
+    host: localhost
+    port: 6379
+    password: foobared
+  session:
+    store-type: redis
+    redis:
+      save-mode: always
+      flush-mode: immediate
