add auth to eureka

--- a/core-lib/pom.xml
+++ b/core-lib/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>ru.abenefic.spring.shop</groupId>
     <artifactId>core</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>core-lib</name>
 
     <properties>
@@ -56,6 +56,11 @@
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
             <version>${io.jsonwebtoken.version}</version>
+        </dependency>
+        <!--Eureka client-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
     </dependencies>
 
