--- a/ms-auth/pom.xml
+++ b/ms-auth/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>ru.abenefic.spring.shop</groupId>
     <artifactId>auth</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>ms-auth</name>
 
     <dependencies>
@@ -23,12 +23,8 @@
         <dependency>
             <groupId>ru.abenefic.spring.shop</groupId>
             <artifactId>core</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>ru.abenefic.spring.shop</groupId>
-            <artifactId>core</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.1</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
