--- a/ms-order/pom.xml
+++ b/ms-order/pom.xml
@@ -11,7 +11,7 @@
 
     <groupId>ru.abenefic.spring.shop</groupId>
     <artifactId>order</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>ms-order</name>
     <description>Demo project for Spring Boot</description>
 
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>ru.abenefic.spring.shop</groupId>
             <artifactId>core</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.1</version>
         </dependency>
     </dependencies>
 
