--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
     <properties>
         <java.version>16</java.version>
-        <spring-cloud.version>2020.0.3-SNAPSHOT</spring-cloud.version>
+        <spring-cloud.version>2020.0.2</spring-cloud.version>
     </properties>
 
     <modules>
@@ -27,6 +27,7 @@
         <module>ms-order</module>
         <module>ms-product</module>
         <module>ms-storage</module>
+        <module>eureka-server</module>
     </modules>
 
     <dependencies>
