--- a/ms-product/pom.xml
+++ b/ms-product/pom.xml
@@ -13,10 +13,10 @@
     <artifactId>product</artifactId>
     <version>0.0.1</version>
     <name>ms-product</name>
-    <description>Demo project for Spring Boot</description>
 
     <properties>
-        <java.version>15</java.version>
+        <shop.core.version>0.0.1</shop.core.version>
+        <aspectj.aspectjweaver.version>1.9.2</aspectj.aspectjweaver.version>
     </properties>
 
     <dependencies>
@@ -28,13 +28,13 @@
         <dependency>
             <groupId>ru.abenefic.spring.shop</groupId>
             <artifactId>core</artifactId>
-            <version>0.0.1</version>
+            <version>${shop.core.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
-            <version>1.9.2</version>
+            <version>${aspectj.aspectjweaver.version}</version>
         </dependency>
     </dependencies>
 
