--- a/ms-product/src/main/resources/application.yaml
+++ b/ms-product/src/main/resources/application.yaml
@@ -1,7 +1,5 @@
 server:
-  servlet:
-    context-path: /shop
-  port: 8189
+  port: 0
 spring:
   datasource:
     driver-class-name: org.h2.Driver
@@ -16,3 +14,10 @@ spring:
   h2:
     console:
       enabled: true
+  application:
+    name: ms-product
+eureka:
+  client:
+    service-url:
+      default-zone: ${EUREKA_URI:http://localhost:8761/eureka}
+    fetch-registry: true
