--- a/core-lib/pom.xml
+++ b/core-lib/pom.xml
@@ -64,8 +64,8 @@
         </dependency>
         <!--Spring-->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
     </dependencies>
 
