--- a/ms-order/src/main/resources/application.yaml
+++ b/ms-order/src/main/resources/application.yaml
@@ -14,6 +14,8 @@ spring:
   h2:
     console:
       enabled: true
+      settings:
+        web-allow-others: true
   application:
     name: ms-order
 eureka:
