--- a/core-lib/src/main/resources/application.yaml
+++ b/core-lib/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ server:
     context-path: /shop
 spring:
   jpa:
-    show-sql: true
+    show-sql: false
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
