--- a/ms-product/pom.xml
+++ b/ms-product/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>aspectjweaver</artifactId>
             <version>${aspectj.aspectjweaver.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
